tulip-cli: use jython-cli